Add JDBC row count capture support
Implements opt-in row count tracking for JDBC operations via db.response.returned_rows span attribute and db.client.response.returned_rows histogram metric.

Key features:
- Disabled by default, enabled via otel.instrumentation.jdbc.experimental.capture-row-count.enabled
- Configurable limit (default 10000) via otel.instrumentation.jdbc.experimental.row-count-limit
- Attribute omitted when row count exceeds limit
- Supports SELECT (via ResultSet iteration), UPDATE/INSERT/DELETE, and batch operations
- Both library and javaagent implementations

Implementation:
- Added DbResponse type with row count field
- Extended DbClientAttributesGetter/Extractor for response row count
- Updated DbClientMetrics to track returned_rows histogram
- Library: OpenTelemetryResultSet wraps ResultSets to track iteration count
- Library: OpenTelemetryStatement extracts counts from int/long return values
- Javaagent: ByteBuddy advice intercepts ResultSet.next() and close()
- Created JdbcTransactionAttributesGetter for transaction operations

Testing:
- Javaagent integration tests with H2 database
- Tests for enabled/disabled states, limits, and various query types

--- a/instrumentation/jdbc/metadata.yaml
+++ b/instrumentation/jdbc/metadata.yaml
@@ -43,6 +43,20 @@ configurations:
       passwords, personally identifiable information or protected health info.
     type: boolean
     default: false
+  - name: otel.instrumentation.jdbc.experimental.capture-row-count.enabled
+    description: >
+      Enables capturing the number of rows returned/affected by database operations as the
+      <code>db.response.returned_rows</code> span attribute and <code>db.client.response.returned_rows</code>
+      histogram metric. For SELECT queries, counts ResultSet.next() calls. For DML operations, captures
+      the executeUpdate() return value. May have performance impact for large result sets.
+    type: boolean
+    default: false
+  - name: otel.instrumentation.jdbc.experimental.row-count-limit
+    description: >
+      Maximum number of rows to count for the <code>db.response.returned_rows</code> attribute.
+      When this limit is exceeded, the attribute is omitted. Only applies when row count capture is enabled.
+    type: long
+    default: 10000
   - name: otel.instrumentation.jdbc-datasource.enabled
     description: Enables instrumentation of JDBC datasource connections.
     type: boolean
