refactor rxjava-3-common module to follow <library>-common-<major.minor> convention

--- a/.fossa.yml
+++ b/.fossa.yml
@@ -3,7 +3,7 @@ version: 3
 targets:
   only:
     # only scanning the modules which are published
-    # (as opposed to internal testing modules
+    # (as opposed to internal testing modules)
     - type: gradle
       path: ./
       target: ':declarative-config-bridge'
@@ -927,7 +927,7 @@ targets:
       target: ':instrumentation:rxjava:rxjava-2.0:library'
     - type: gradle
       path: ./
-      target: ':instrumentation:rxjava:rxjava-3-common:library'
+      target: ':instrumentation:rxjava:rxjava-common-3.0:library'
     - type: gradle
       path: ./
       target: ':instrumentation:rxjava:rxjava-3.0:javaagent'
