--- a/.github/workflows/build-common.yml
+++ b/.github/workflows/build-common.yml
@@ -248,6 +248,7 @@ jobs:
           - 21
           - 25 # renovate(java-version)
           - 25-deny-unsafe
+          - 26-ea
         vm:
           - hotspot
           - openj9
@@ -262,6 +263,8 @@ jobs:
         exclude:
           - vm: ${{ inputs.skip-openj9-tests && 'openj9' || '' }}
           - test-java-version: 25-deny-unsafe
+            vm: openj9
+          - test-java-version: 26-ea
             vm: openj9
       fail-fast: false
     steps:
