Spring instrumentation metadata and experimental test splitting
Add metadata (display_name, semantic_conventions, features, configurations)
for all Spring instrumentation modules. Split experimental test suites for
spring-web-6.0 and spring-ws-2.0 so that default and experimental behaviors
are verified independently. Fix spring-webmvc attribute name typo in metadata
(spring-webmvc-view-name -> spring-webmvc.view.name).

--- a/instrumentation/spring/spring-kafka-2.7/metadata.yaml
+++ b/instrumentation/spring/spring-kafka-2.7/metadata.yaml
@@ -1,3 +1,4 @@
+display_name: Spring Kafka
 description: This instrumentation enables consumer messaging spans for Spring Kafka listeners.
 library_link: https://spring.io/projects/spring-kafka
 semantic_conventions:
