--- a/instrumentation/spring/spring-rabbit-1.0/metadata.yaml
+++ b/instrumentation/spring/spring-rabbit-1.0/metadata.yaml
@@ -1,5 +1,8 @@
+display_name: Spring Rabbit
 description: This instrumentation enables consumer messaging spans for Spring RabbitMQ listeners.
 library_link: https://spring.io/projects/spring-amqp
+semantic_conventions:
+  - MESSAGING_SPANS
 configurations:
   - name: otel.instrumentation.messaging.experimental.capture-headers
     description: A comma-separated list of header names to capture as span attributes.
