--- a/instrumentation/spring/spring-webmvc/spring-webmvc-5.3/metadata.yaml
+++ b/instrumentation/spring/spring-webmvc/spring-webmvc-5.3/metadata.yaml
@@ -1,5 +1,11 @@
+display_name: Spring WebMVC
 description: >
   This instrumentation provides a library integration for Spring WebMVC controllers, that enables
   the creation of HTTP server spans and metrics for requests processed by the Spring servlet
   container.
 library_link: https://docs.spring.io/spring-framework/docs/current/javadoc-api/org/springframework/web/servlet/mvc/package-summary.html
+semantic_conventions:
+  - HTTP_SERVER_SPANS
+  - HTTP_SERVER_METRICS
+features:
+  - HTTP_ROUTE
