--- a/instrumentation/spring/spring-rmi-4.0/metadata.yaml
+++ b/instrumentation/spring/spring-rmi-4.0/metadata.yaml
@@ -1,2 +1,6 @@
+display_name: Spring RMI
 description: This instrumentation enables RPC client and RPC server spans for Spring RMI applications.
 library_link: https://docs.spring.io/spring-framework/docs/4.0.x/javadoc-api/org/springframework/remoting/rmi/package-summary.html
+semantic_conventions:
+  - RPC_CLIENT_SPANS
+  - RPC_SERVER_SPANS
