--- a/instrumentation/spring/spring-web/spring-web-6.0/metadata.yaml
+++ b/instrumentation/spring/spring-web/spring-web-6.0/metadata.yaml
@@ -1,4 +1,14 @@
+display_name: Spring Web
 description: >
-  This instrumentation provides a library integration that enables capturing HTTP client spans and
-  metrics for Spring's RestTemplate.
+  This instrumentation enriches HTTP client spans with URL template information for Spring's
+  RestTemplate 6.0+.
+features:
+  - HTTP_ROUTE
 library_link: https://github.com/spring-projects/spring-framework
+configurations:
+  - name: otel.instrumentation.http.client.emit-experimental-telemetry
+    description: >
+      Enables the capture of experimental HTTP client telemetry, including URL template
+      as the span name.
+    type: boolean
+    default: false
