Constrain plexus-xml to 4.0.4 to fix XmlService error with shadow 9.3.2
Shadow 9.3.2 upgraded plexus-xml to 4.1.1 which transitively pulls in
Maven 4 API (maven-xml, maven-api-xml). The Maven 4 API XmlService uses
JPMS-only service registration (module-info provides), which is not
discovered by ServiceLoader in Gradle's non-modular classloader, causing
ExceptionInInitializerError: No XmlService implementation found.

Constraining plexus-xml to 4.0.4 (last version without Maven 4 API
dependency) resolves the issue.

--- a/examples/extension/build.gradle
+++ b/examples/extension/build.gradle
@@ -1,3 +1,13 @@
+// plexus-xml 4.1+ pulls in Maven 4 API which uses JPMS-only service registration,
+// causing "No XmlService implementation found" in Gradle's classloader
+buildscript {
+  configurations.classpath {
+    resolutionStrategy {
+      force "org.codehaus.plexus:plexus-xml:4.0.4"
+    }
+  }
+}
+
 plugins {
   id "java"
 
